# dj-longread

./: .gitignore  Add to custom (temporary).ipynb  Linked.ipynb  Makefile  Procfile  README.md  Tab sorts.ipynb  Text Model.ipynb  add_to_custom_temporary.py  aggregators_analysis.ipynb  fail_fast.py  manage.py  pyproject.toml  requirements-lock.txt  requirements.txt
data/: extract_liked_links.csv  links.csv  models.pkl  onetab.txt  tfidf.pkl
djlongread/: asgi.py  settings.py  urls.py  wsgi.py
ingest/: aggregate_feeds.py  export_db.py  import_db.py  sync_db.py
link/: admin.py  apps.py  config.py  config_weights.py  filters.py  forms.py  models.py  views.py
link/migrations/: 0001_initial.py  0002_auto_20200517_0517.py  0002_auto_20200606_2045.py  0002_link_seed.py  0003_auto_20200517_0521.py  0003_auto_20210321_2051.py  0003_link_benched.py  0004_auto_20200517_0524.py  0004_auto_20200614_1715.py  0004_link_tweet.py  0005_auto_20200517_0527.py  0005_auto_20210715_2235.py  0006_auto_20200524_1422.py  0006_auto_20210716_1212.py  0007_auto_20200524_1504.py  0007_auto_20210716_1217.py  0008_auto_20200524_1520.py  0008_auto_20211003_1335.py  0009_auto_20200524_1546.py  0009_link_starred.py  0010_alter_link_id.py  0010_auto_20200524_1551.py  0011_auto_20200524_1608.py
link/templatetags/: link_extras.py
link/utils/: download.py  embed.py  ingest.py  url.py
links/: admin.py  apps.py  models.py
project_stanza/: asgi.py  settings.py  urls.py  views.py
scripts/: categorize.py  clean_html.sh  clean_txt.py  csv_to_postgres.py  extract_archive.py  extract_sites.py  import_onetab.py  make_site.py  save_glove.py
utils/: download.py  sql.py  url.py
(+12 files in other folders)
