[tool.poetry]
name = "project_stanza2"
version = "0.1.0"
description = ""
authors = ["Peter Hurford <peter@peterhurford.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "*"
psycopg2-binary = "^2.8.4"
gunicorn = "^20.0.4"
requests = "^2.23.0"
django-background-tasks = "^1.2.5"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
