[tool.poetry]
name = "dj_longread"
version = "0.1.0"
description = ""
authors = ["Peter Hurford <peter@peterhurford.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
django-background-tasks = "^1.2.5"
gunicorn = "^20.0.4"
mlgear = { git = "https://github.com/peterhurford/mlgear.git", branch = "master" }
pandas = "*"
psycopg2-binary = "^2.8.4"
requests = "^2.23.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
