[tool.poetry]
name = "dj_longread"
version = "0.1.0"
description = ""
authors = ["Peter Hurford <peter@peterhurford.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.11.17"
beautifulsoup4 = "^4.8.2"
django = "^3.1"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
lxml = "^4.6.2"
mlgear = { git = "https://github.com/peterhurford/mlgear.git", branch = "master" }
pandas = "*"
psycopg2-binary = "^2.8.4"
requests = "^2.23.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
